<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Story App</string>
    <string name="title" >fill in your personal data completely</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registring">Register</string>
    <string name="login">Login</string>
    <string name="errorName">Input your name</string>
    <string name="errorEmail">Input your email</string>
    <string name="errorPassword">Input your password</string>
    <string name="alertMessage">Your account has been created. Please login.</string>
    <string name="positiveBtn">Next</string>
    <string name="password_alert">Password must be at least 8 characters</string>
    <string name="email_alert">Wrong email format</string>
    <string name="name_alert">Name cannot be empty</string>
    <string name="register_success">Registration success</string>
    <string name="login_success">Login success</string>
    <string name="register_failed">Registration failed</string>
    <string name="login_failed">Login failed</string>
    <string name="description">Description</string>
    <string name="login_welcome">Login</string>
    <string name="register_welcome">Sign Up</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="title_welcome">Share your story here</string>
    <string name="next_button">Next</string>
    <string name="welcome_message">Welcome!</string>
    <string name="desc_hint">Add description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="permission_not_accepted">Permission not accepted</string>
    <string name="add_story">Add Story</string>
    <string name="failed_upload">Upload failed</string>
    <string name="not_selected_image">Choose image first</string>
    <string name="more_menu">More</string>
    <string name="logout">Logout</string>
    <string name="detail">Detail story</string>
    <string name="success_upload">Uploading success</string>
    <string name="login_data">Make sure the data you enter is correct</string>
    <string name="choose_picture">Choose image</string>
    <string name="translate">Translate</string>
</resources>