<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/more_menu"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/translate_action"
                android:title="@string/translate"
                android:icon="@drawable/ic_language_24_white"
                app:showAsAction="never"/>
            <item
                android:id="@+id/logout_action"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout_24_white"
                app:showAsAction="never"/>
        </menu>

    </item>
</menu>